EdgeControllerTest - code style fixes and IDEA warning fixes